--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,7 +3,7 @@
  * @Author: Dong Wei
  * @Date: 2021-08-11 15:53:45
  * @LastEditors: Dong Wei
- * @LastEditTime: 2023-03-24 11:14:58
+ * @LastEditTime: 2023-04-07 16:25:56
  * @FilePath: \vue3-playground\src\styles\common.scss
  */
 *,
@@ -243,3 +243,11 @@ $size-map: (
 // input:-internal-autofill-selected {
 //   box-shadow: inset 0 0 0 1000px #fff !important;
 // }
+
+// 说明区
+.commit {
+  display: inline-block;
+  padding: 20px;
+  background: var(--color-commit-bg);
+  color: #5b4913;
+}
