--- a/src/styles/var.css
+++ b/src/styles/var.css
@@ -18,7 +18,7 @@
   /* 边框颜色 */
   --color-border: #e6e7e9;
   /* 说明背景颜色 */
-  --color-commit-bg: #66a9c9;
+  --color-commit-bg: rgba(64, 158, 255, 0.1);
   /* 字体大小 */
   --font-size: 14px;
 
